# rover_firmware

./: CMakeLists.txt  README.md  encoders_record.txt  package.xml  platformio.ini
encoders/: encoder_jetson.hpp  encoder_pulse.hpp  encoders.cpp
launch/: rover_driver.launch  rover_drivers.launch  rover_lidar.launch  rover_pid.launch
lib/ros_lib/: ros.h
lib/ros_lib/ros/: node_handle.h
sketchs/: dc_motors.cpp  main_test.cpp
src/: dc_motor.hpp  encoder_pulse.hpp  encoder_pulse_legacy.hpp  main.cpp  main_legacy.cpp  ros.h
